[ENG-3628] Fix alignment of the success message (#411)

--- a/src/components/RequestQuotePage/index.scss
+++ b/src/components/RequestQuotePage/index.scss
@@ -12,6 +12,10 @@
     justify-content: center;
     font-size: $font-regular-size;
     font-weight: bold;
+    text-align: center;
+    @include tablet() {
+      padding: 0 $h-20;
+    }
   }
 
   &__header-message {
